# mathjit

./: Cargo.toml  README.md
benches/: benchmarks.rs
examples/: test.rs
src/: assemble.rs  compile.rs  lib.rs
src/compile/: mod.rs  optimise.rs
src/expr_parse/: eval.rs  mod.rs  parse.rs
tests/: tests.rs
