[package]
name = "mathjit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eq_parse = { path = "../eq_parse/" }
iced-x86 = { version = "1.15", features = ["code_asm"] }
memmap2 = "0.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[lib]
doctest = false
bench = false
