[package]
name = "mathjit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
iced-x86 = { version = "1.15", features = ["code_asm"] }
memmap2 = "0.5"
meval = "0.2"
tinystr = "0.4.12"

[dev-dependencies]
criterion = { version = "0.3", features = [] }

[[bench]]
name = "benchmarks"
harness = false

[lib]
doctest = false
bench = false
